updated teh dashboard code